Fixing the height and width to some reasonable max values for the images.

--- a/k12/flip/flipedornot.html
+++ b/k12/flip/flipedornot.html
@@ -25,6 +25,8 @@
       position: absolute;
       margin: 1%;
       padding: 10px;
+      max-height: 120em;
+      max-width: 120em;
     }
 
     .button {
